--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node ./bin/www"
   },
   "nodemonConfig": {
-    "ignore": ["public/*"]
+    "ignore": [
+      "public/*"
+    ]
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -14,10 +16,12 @@
     "compression": "^1.7.4",
     "connect-mongo": "^3.1.2",
     "cookie-parser": "~1.4.4",
+    "dataloader": "^2.0.0",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
+    "faker": "^4.1.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
